Add: 파일 업로드/이미지 조회

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@ build/
 src/main/resources/application.yaml
 docker-compose.override.yml
 
+static/*
+!static/.gitkeep
+
 ### STS ###
 .apt_generated
 .classpath
